# nasa-pace-data-reader

./: .gitignore  .pre-commit-config.yaml  CHANGE_LOG_MEMORY.md  IMPROVEMENTS.md  Install.sh  README.md  pyproject.toml
Examples/: L1B-RGB-example.py  L1B-example.py  L1C-OCI-Example.py  L1C-SPEXOne-Example.py  L1C-example.ipynb  L1C-example.py  L2-HARP2-GRASP-example.py  auto-image-gen-harp2.py  batch_rgb_generator.py  compositeRGBImage.py  example.py  gapmap.py  harp2-l1c-example.ipynb  l1a-harp2-hist.py  plotTheOrbitData.py  quicklook-l1c.sh  saveTheOrbitData2nc4.py
src/nasa_pace_data_reader/: L1.py  L2.py  __init__.py  exceptions.py  plot.py
