[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa_pace_data_reader"
version = "0.0.3.4"
authors = [
  { name="Anin Puthukkudy", email="aputhukkudy@umbc.edu" },
]
description = "A package for reading NASA PACE data files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aninramesh/nasa-pace-data-reader"
Issues = "https://github.com/aninramesh/nasa-pace-data-reader/issues"